--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ button:hover {
 
 .normatives-label {
   font-size: 24px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .normative {
@@ -217,5 +217,24 @@ button:hover {
   .back-button {
     padding: 6px 12px;
     font-size: 12px;
+  }
+
+  .container {
+    width: 90%;
+  }
+
+  .panel {
+    width: 100%;
+    padding: 20px;
+  }
+
+  .data-container {
+    flex-wrap: wrap;
+  }
+
+  .square {
+    width: 150px;
+    height: 150px;
+    margin: 0 10px 20px;
   }
 }
