--- a/style.css
+++ b/style.css
@@ -34,6 +34,16 @@ header {
 .splash-content {
   text-align: center;
   color: #000;
+  animation: fade-in 1s ease-out forwards;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .splash-title {
@@ -75,7 +85,6 @@ button:hover {
 }
 
 .author {
-  font-size: 15px;
   color: #000;
   position: absolute;
   bottom: 20px;
@@ -90,6 +99,7 @@ button:hover {
   transform: translate(-50%, -50%);
   display: none;
   background-color: #f7f7f7;
+  animation: fade-in 1s ease-out forwards;
 }
 
 .panel {
@@ -128,18 +138,13 @@ button:hover {
 
 .label {
   font-size: 24px;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .score-value,
 .visits-value {
-  font-size: 48px;
+  font-size: 36px;
   font-weight: bold;
-  color: #000;
-}
-
-.normatives-container {
-  text-align: left;
 }
 
 .normatives-label {
@@ -170,54 +175,64 @@ button:hover {
 
 /* Медиа-запросы для мобильных устройств */
 @media only screen and (max-width: 600px) {
+  header {
+    padding: 10px 0;
+  }
+
+  .logo {
+    width: 60px;
+    height: 60px;
+  }
+
   .splash-title {
     font-size: 24px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
   }
 
   .splash-subtitle {
     font-size: 14px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
 
   input[type="text"] {
     padding: 8px;
-    font-size: 14px;
+    font-size: 16px;
+    width: 200px;
     margin-bottom: 10px;
   }
 
   button {
     padding: 8px 24px;
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .student-name {
-    font-size: 18px;
+    font-size: 24px;
     margin-bottom: 10px;
   }
 
   .label {
-    font-size: 14px;
+    font-size: 16px;
     margin-bottom: 5px;
   }
 
   .score-value,
   .visits-value {
-    font-size: 18px;
+    font-size: 24px;
   }
 
   .normatives-label {
-    font-size: 14px;
-    margin-bottom: 5px;
+    font-size: 16px;
+    margin-bottom: 10px;
   }
 
   .normative {
-    font-size: 12px;
+    font-size: 14px;
   }
 
   .back-button {
-    padding: 6px 12px;
-    font-size: 12px;
+    padding: 8px 16px;
+    font-size: 16px;
   }
 
   .container {
@@ -234,8 +249,8 @@ button:hover {
   }
 
   .square {
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     margin: 0 10px 20px;
   }
 }
